; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_utils.c_flushout.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_utils.c_flushout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rptr = common dso_local global i64 0, align 8
@wptr = common dso_local global i64 0, align 8
@wfd = common dso_local global i32 0, align 4
@Buff = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @flushout() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* @rptr, align 8
  %4 = load i64, i64* @wptr, align 8
  %5 = icmp slt i64 %3, %4
  br i1 %5, label %6, label %20

6:                                                ; preds = %0
  %7 = load i64, i64* @wptr, align 8
  %8 = load i64, i64* @rptr, align 8
  %9 = sub nsw i64 %7, %8
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* @wfd, align 4
  %12 = load i64, i64* @rptr, align 8
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @write(i32 %11, i64 %12, i32 %13)
  store i32 %14, i32* %1, align 4
  %15 = load i32, i32* %1, align 4
  %16 = load i32, i32* %2, align 4
  %17 = icmp eq i32 %15, %16
  %18 = zext i1 %17 to i32
  %19 = call i32 @assert(i32 %18)
  br label %20

20:                                               ; preds = %6, %0
  %21 = load i64, i64* @Buff, align 8
  store i64 %21, i64* @wptr, align 8
  store i64 %21, i64* @rptr, align 8
  ret void
}

declare dso_local i32 @write(i32, i64, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
